Fix dark mode name

--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ a {
   cursor: pointer;
 }
 
-#nightMode {
+#darkMode {
   font-size: 1.8rem;
 }
 
